diesel_compile_tests/tests/fail/derive/bad_primary_key.stderr
error: expected `,`
  --> tests/fail/derive/bad_primary_key.rs:12:30
   |
12 | #[diesel(primary_key(id, bar = "baz"))]
   |                              ^

error: expected `,`
  --> tests/fail/derive/bad_primary_key.rs:19:29
   |
19 | #[diesel(primary_key(id, qux(id)))]
   |                             ^

error: unexpected end of input, expected parentheses
       help: The correct format looks like `#[diesel(key1, key2)]`
  --> tests/fail/derive/bad_primary_key.rs:26:21
   |
26 | #[diesel(primary_key)]
   |                     ^

error: expected parentheses
  --> tests/fail/derive/bad_primary_key.rs:33:22
   |
33 | #[diesel(primary_key = id)]
   |                      ^
